--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,13 @@
     {
       "matches": ["*://www.facebook.com/*","*://facebook.com/*"],
       "css": ["style.css"],
-      "js": ["script.js"]
+      "js": ["script.js"],
+      "run_at": "document_end"
     }
+  ],
+
+  "permissions": [
+    "storage"
   ],
 
   "browser_action": {
