--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
 
-  "name": "blargh",
+  "name": "blarfb",
   "description": "facebook thing",
-  "version": "1.0",
+  "version": "1.0.1",
 
   "icons": { "16": "brain-16.png",
            "48": "brain-48.png",
